--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 # Tiny Tapeout project information
 project:
-  title:        "3x3 Matrix Multiplicator"      # Project title
+  title:        "3x3_Matrix_Multiplicator"      # Project title
   author:       "LMRC"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  ""A synchronous 3x3 matrix multiplication accelerator written in Verilog. Computes C = A x B using 8-bit inputs and produces 16-bit outputs in one clock cycle"      # One line description of what your project does
@@ -17,7 +17,7 @@ project:
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "tt_um_ch1ll1peppers1_matmul.v"
+    - "matmul_3x3.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
